:art: Update plugin detection policy